// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`queryCourses > properly handles a list of five years 1`] = `
[
  {
    "departments": [
      "AMCON",
    ],
    "year": 2013,
  },
  {
    "departments": [
      "ASIAN",
    ],
    "year": 2012,
  },
]
`;

exports[`queryCourses > queries a list of courses 1`] = `
[
  {
    "departments": [
      "AMCON",
    ],
    "year": 2013,
  },
]
`;
